--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,7 +7,7 @@ disabled_rules:
   - large_tuple
   - function_parameter_count
   - trailing_whitespace
-  - void_return
+  - void_return`
   - closure_end_indentation
   - trailing_comma
   - todo
